; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_dir_clear.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_dir_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dir_savefile = common dso_local global i8* null, align 8
@current_savefile_dir = common dso_local global i8* null, align 8
@dir_savestate = common dso_local global i8* null, align 8
@current_savestate_dir = common dso_local global i8* null, align 8
@dir_system = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dir_clear(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %15 [
    i32 130, label %4
    i32 133, label %6
    i32 129, label %8
    i32 132, label %10
    i32 128, label %12
    i32 131, label %14
  ]

4:                                                ; preds = %1
  %5 = load i8*, i8** @dir_savefile, align 8
  store i8 0, i8* %5, align 1
  br label %15

6:                                                ; preds = %1
  %7 = load i8*, i8** @current_savefile_dir, align 8
  store i8 0, i8* %7, align 1
  br label %15

8:                                                ; preds = %1
  %9 = load i8*, i8** @dir_savestate, align 8
  store i8 0, i8* %9, align 1
  br label %15

10:                                               ; preds = %1
  %11 = load i8*, i8** @current_savestate_dir, align 8
  store i8 0, i8* %11, align 1
  br label %15

12:                                               ; preds = %1
  %13 = load i8*, i8** @dir_system, align 8
  store i8 0, i8* %13, align 1
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %1, %14, %12, %10, %8, %6, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
